# Mafia_Game_for_holbies

./: .flake8  .gitignore  README.md  app.py  config.py  pyproject.toml
home/: home.py
home/templates/: index.html
host/: host.py
host/templates/: host.html
player/: player.py
player/templates/: player.html
static/: host.html  role.html
static/css/: 404.css  role.css  styles.css
templates/: 404.html  base.html
utils/: role.py  room_code.py
